portfolio-dev/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
  labels:
    app: portfolio-backend
spec:
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
      containers:
        - name: portfolio-backend
          image: ghcr.io/traptitech/traportfolio:main@sha256:7e986b0517a1b4dea27b57d7e2700c1d385edf098e458e05c293166983418700
          ports:
            - containerPort: 1323
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
