portfolio-dev/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfolio-dev-backend
  name: portfolio-dev-backend
spec:
  ports:
    - name: "3009"
      port: 3009
      targetPort: 1323
  selector:
    app: portfolio-dev-backend
